--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,80 @@
-# Ignore VS Code settings
+# Compiled object files
+
+\*.o
+\*.obj
+
+# Compiled binary files
+
+\*.exe
+\*.out
+\*.app
+
+# Static and dynamic libraries
+
+\*.a
+\*.lib
+\*.so
+\*.dylib
+
+# IDE / Editor folders
+
 .vscode/
-.vscode
+.idea/
+\*.suo
+\*.user
+\*.userossc
+\*.sln.docstates
 
-# Ignore OS-specific files
-.DS_Store
+# OS-specific files
+
 Thumbs.db
+desktop.ini
+.DS\_Store
 
-# Ignore Python cache (if you're working in Python)
-__pycache__/
-*.pyc
+# Python cache (if applicable)
 
-# Java class files (if relevant)
-*.class
+**pycache**/
+\*.pyc
+\*.pyo
+\*.pyd
 
-# Ignore compiled files
-*.o
-*.exe
+# Java class files (if applicable)
 
-# Ignore virtual environments
+\*.class
+
+# Virtual environments
+
 venv/
 .env/
+
+# Build directories
+
+build/
+dist/
+Debug/
+Release/
+
+# Logs and temporary files
+
+\*.log
+\*.tmp
+\*.temp
+\*.bak
+
+# CMake build folders
+
+CMakeFiles/
+CMakeCache.txt
+cmake\_install.cmake
+Makefile
+
+# Coverage and test reports
+
+coverage/
+\*.gcda
+\*.gcno
+\*.gcov
+
+# Backup files
+
+\*\~
